--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,30 @@
 venv
+
+# Ignore compiled Python files
+*.pyc
+
+# Ignore development-related files and directories
+__pycache__/
+*.sqlite3
+*.env
+
+# Ignore IDE files
+.idea/
+
+# Ignore static files
+/static/
+
+# Ignore media files
+/media/
+
+# Ignore log files
+*.log
+
+# Ignore virtual environment files (assuming you use virtualenv or venv)
+env/
+.env
+
+/apps/*/migrations/*
+!/apps/*/migrations/__init__.py
+
+general.log
