--- a/requirements.in
+++ b/requirements.in
@@ -8,3 +8,75 @@ whitenoise
 gevent
 djangorestframework-simplejwt
 social-auth-app-django
+
+annotated-types==0.6.0
+asgiref==3.8.1
+blis==0.7.11
+catalogue==2.0.10
+certifi==2024.2.2
+cffi==1.16.0
+charset-normalizer==3.3.2
+click==8.1.7
+cloudpathlib==0.16.0
+colorama==0.4.6
+confection==0.1.4
+contourpy==1.2.1
+cycler==0.12.1
+cymem==2.0.8
+Django==5.0.4
+django-jazzmin==2.6.1
+djangorestframework==3.15.1
+djangorestframework-simplejwt==5.3.1
+en-core-web-lg @ https://github.com/explosion/spacy-models/releases/download/en_core_web_lg-3.7.1/en_core_web_lg-3.7.1-py3-none-any.whl#sha256=ab70aeb6172cde82508f7739f35ebc9918a3d07debeed637403c8f794ba3d3dc
+fonttools==4.51.0
+ftfy==6.2.0
+gevent==24.2.1
+greenlet==3.0.3
+gunicorn==21.2.0
+idna==3.7
+Jinja2==3.1.3
+joblib==1.4.0
+kiwisolver==1.4.5
+langcodes==3.3.0
+MarkupSafe==2.1.5
+matplotlib==3.8.4
+murmurhash==1.0.10
+nltk==3.8.1
+numpy==1.26.4
+packaging==24.0
+pandas==2.2.2
+pillow==10.3.0
+preshed==3.0.9
+psycopg2==2.9.9
+pycparser==2.22
+pydantic==2.7.1
+pydantic_core==2.18.2
+PyJWT==2.8.0
+pyparsing==3.1.2
+python-dateutil==2.9.0.post0
+pytz==2024.1
+regex==2024.4.16
+requests==2.31.0
+scikit-learn==1.3.0
+scipy==1.13.0
+seaborn==0.13.2
+six==1.16.0
+smart-open==6.4.0
+spacy==3.7.4
+spacy-legacy==3.0.12
+spacy-loggers==1.0.5
+sqlparse==0.5.0
+srsly==2.4.8
+thinc==8.2.3
+threadpoolctl==3.4.0
+tqdm==4.66.2
+typer==0.9.4
+typing_extensions==4.11.0
+tzdata==2024.1
+urllib3==2.2.1
+wasabi==1.1.2
+wcwidth==0.2.13
+weasel==0.3.4
+whitenoise==6.6.0
+zope.event==5.0
+zope.interface==6.3
